doc: upload final report and clean up repo