@@ -10,34 +10,51 @@ A SIEM Systems in the purpose of "CS Project" subject at VGU
 - Scrum Plan: Google Sheets
 # [Open Scrum Planning](https://docs.google.com/spreadsheets/d/18XOCYiPlReWLvm8figp2Bqw22co1El8d6yE1n-eLEi8/edit?usp=sharing)
 
-# Questions and Guides
+# Notes on bug fixes:
+## JavaFX
+Add this in file `.vscode/launch.json` below `launch`:
+```
+"vmArgs": "--module-path /usr/lib/jvm/javafx-arm-sdk/lib --add-modules javafx.controls,javafx.fxml",
+```
 
-## Task 1
-### Note:
-- To create dummy web server, we decided to have buttons/URLs for generate log messages of: failed logins, access restricted resource... [See more vulnerabilities](https://owasp.org/www-project-top-ten/2017/A10_2017-Insufficient_Logging%2526Monitoring)
-  - [Create web server](https://www.vogella.com/tutorials/ApacheHTTP/article.html)
-  - [Basic of Apache Web Server](https://www.youtube.com/watch?v=rCr3-YlL5S8)
+## Produce JAR
+Put this in build/plugins section:
 
-### Questions:
-- [Martin] The webserver will be given or create by ourselves? If not given:
-  - [Martin] Is the dummy web server above is valid?
-- [Manuel & Team] Does Esper have alert ranking or just define the alert message is LOW/HIGH?
-- [Team] Find: web server potential security threats? List them out.
-- [Team] How we define the Event Hierarchy? How do we define patterns for recognizing the alert from events?
+```xml
+<plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <configuration>
+    <archive>
+        <manifest>
+        <mainClass>SIEMsystem.dashboard.Main</mainClass>
+        </manifest>
+    </archive>
+    <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+    </descriptorRefs>
+    </configuration>
+</plugin>
+```
 
-## Task 2
-### Note:
-- How can we simulate the port scanning? Found: `nmap` https://www.youtube.com/watch?v=4t4kBkMsDbQ
-- Determine the pattern for vertical, horizontal, block port scanning?
+Open terminal, at project directory, enter:
 
-### Questions:
-- [Manuel] Do you have any suggestion about simulate a port scanning: vertical, horizontal, block scan?
-- [Team] Event Hierarchy? For what, its uses? (Ex: previous SSH task)
-- [Team] Pcap4j, how to capture network traffic?
-- [Team] How to create a pattern?
+```bash
+mvn clean compile assembly:single
+```
 
-## Task 3
-### Questions
-- [Martin] What do you mean by at least 3 of out 4? Can we just only skip task 3? Is the score of 4 tasks done higher than 3 tasks?
-## Task 4
-### Questions
+To run the system, please make sure your system folder contains as following:
+
+```
+- folder\
+    - .resource\properties
+        - cepengine.properties
+        - priorities.properties
+    - SIEMsystem*.jar
+    - run.sh
+```
+
+In that:
+
+- `.resource`: for storing configurations
+- `SIEMsystem*.jar`: jar file of the system
+- `run.sh`: script to run the system
